<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="description">Lokalizator grobów to aplikacja mobilna ułatwiająca odnalezienie grobu na poznańskich cmentarzach.\nPo wprowadzeniu imienia i nazwiska i/lub daty urodzenia, śmierci lub pogrzebu osoby zmarłej, lokalizacja mogiły wyświetlana jest na mapie.\nAplikacja, opracowana przez firmę Itiner, opiera się na bazie danych Geopozu, która udostępniana jest w ramach API poznan.pl. Kod aplikacji jest dostępny pod adresem: (https://github.com/starsky/grave_finder/ ).</string>
    <string name="license_txt">Aplikacja jest wydawana na licencji GNU GPLv3 (http://www.gnu.org/copyleft/gpl.html ).</string>
    <string name="libraries_txt">Nutiteq Map SDK (http://www.nutiteq.com/ )\nJava Map Projection Library (http://www.jhlabs.com/java/maps/proj/ )</string>
    <string name="query_io_err">Nastąpił błąd podczas próby połączenia. Spróbuj ponownie później.</string>
    <string name="name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="name_query_hint">Imię i/lub nazwisko osoby zmarłej</string>
    <string name="necropolis">Cmentarz</string>
    <string name="additional_query_params">Dodatkowe opcje wyszukiwania</string>
    <string name="date">"Data:"</string>
    <string name="birth_date">urodzenia</string>
    <string name="death_date">śmierci</string>
    <string name="burial_date">pogrzebu</string>
    <string name="search">Szukaj</string>
    <string name="no_conn">Brak dostępu do Internetu.</string>
    <string name="turn_on_conn">Włącz połączenie internetowe.</string>
    <string name="check_conn">Sprawdź swoje połączenie.</string>
    <string name="data_api_poznan">Dane: API poznan.pl</string>
    <string name="born_abv">ur.</string>
    <string name="died_abv">zm.</string>
    <string name="funreal">pogrzeb</string>
    <string name="grave">Grób</string>
    <string name="zoom_map">Przybliż mapę</string>
    <string name="your_location">Twoja pozycja</string>
    <string name="quater">"Kwatera:"</string>
    <string name="row">Rząd:</string>
    <string name="field">Pole:</string>
    <string name="poznan_logo_desc">Poznań-logo</string>
    <string name="geopoz_logo_desc">GeoPoz-logo</string>
    <string name="itiner_logo_desc">Itiner-logo</string>
    <string name="no_data">Brak danych</string>
    <string name="no_data_desc">Nie udało się znaleźć wyników dla podanego zapytania.</string>
    <string name="unexpected_server_err">Serwer zwrócił niepoprawne dane. Sprawdź swoje połączenie. Jeśli problem będzie się powtarzał spróbuj później.</string>
    <string name="map_no_connection">Brak połączenia</string>
    <string name="downloading_data">Pobieranie danych</string>
    <string name="ok">OK</string>
    <string name="list_offline_warning">Brak połączenia z internetem. Lista wyników pochodzi z pamięci podręcznej i może być niepełna.</string>
    <string name="clear_hints">Wyczyść podpowiedzi</string>
    <string name="clear_cache">Wyczyść pamięć podręczną</string>
    <string name="about_app">O programie</string>
    <string name="libraries">Biblioteki:</string>
    <string name="no_results">Brak wyników</string>
    <string name="searching">Wyszukiwnie</string>
    <string name="warning_turn_on_gps">Włącz GPS w urządzeniu.</string>

</resources>
